Fix #3 - avoid wrapping comments

--- a/client/@/css/app.css
+++ b/client/@/css/app.css
@@ -18,6 +18,10 @@ footer {
   opacity: var(--opacity);
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 header,
 main.about code {
   background-color: var(--background-header);
